--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,20 +14,18 @@ services:
   dns:
     - 77.88.8.1
     - 77.88.8.2
-    - 77.88.8.3
-    - 77.88.8.7
-    - 77.88.8.8
-    - 77.88.8.88
   extra_hosts:
     - 12-kanal.ru:109.194.112.233
     - 360tv.ru:95.213.164.20
     - 47news.ru:77.244.221.63
     - donbasstoday.ru:193.233.15.62
     - www.donnews.ru:185.179.190.159
+    - www.europereloaded.com:147.135.97.116
     - fine-news.ru:213.139.208.57
     - mosregtoday.ru:178.154.213.69
     - novorossiia.ru:87.236.16.191
     - pizzahut.ru:185.98.84.80
+    - politcentr.ru:87.236.16.126
     - russia-insider.com:158.69.116.70
     - sbarro-pizza.ru:185.165.123.36
     - www.voltairenet.org:65.108.13.235
